Fix the absence of padding on some UI buttons.

It turns out that despite what I thought some buttons are being created
as MdTextButtons even when harmony is off, for example in the infobar. So
this patch reverts some changes from crrev.com/2660553005 to ensure
behavior pre-harmony remains unchanged.

BUG=694129

Review-Url: https://codereview.chromium.org/2702403010
Cr-Commit-Position: refs/heads/master@{#452937}

Former-commit-id: 2c407ccc88aae08641fcb667277df2b08a2f251a