chrome/browser/ui/views/harmony/harmony_layout_delegate.cc
@@ -21,6 +21,7 @@ int HarmonyLayoutDelegate::GetMetric(Metric metric) const {
       return kHarmonyLayoutUnit;
     case Metric::DIALOG_BUTTON_MARGIN:
       return kHarmonyLayoutUnit;
+    case Metric::BUTTON_MINIMUM_WIDTH:
     case Metric::DIALOG_BUTTON_MINIMUM_WIDTH:
       // Minimum label size plus padding.
       return 2 * kHarmonyLayoutUnit +
