ui/views/views_delegate.h
@@ -219,7 +219,10 @@ class VIEWS_EXPORT ViewsDelegate {
   // Returns the margins that should be applied around a bubble dialog.
   virtual gfx::Insets GetBubbleDialogMargins() const;
 
-  // Returns the default minimum width of a dialog button.
+  // Returns the default minimum width of a button.
+  virtual int GetButtonMinimumWidth() const;
+
+  // Returns the minimum width of a dialog button.
   virtual int GetDialogButtonMinimumWidth() const;
 
   // Returns the default padding to add on each side of a button's label.
